# Light_Qt

./: CMakeLists.txt  README.md  todo.txt
Test/: CMakeLists.txt  main.cpp
inc/: Light.h
src/: Light.cpp
